--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
         <br>
         <button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger"> Finalizar </button>
         <button ng-show="!iniciado" ng-click="iniciar()" class="btn btn-success"> Iniciar </button>
+        <h3> Inscrição de suricatos!</h3>
+        <form name="form_1">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group form-group-default">
+                        <label>Nome</label>
+                        <input class="form-control" type="text" id="nome_suricato" name="nome_suricato" ng-model="nome_suricato">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <button ng-click="submeter()" class="btn btn-primary">
+                        Adicionar
+                    </button>
+                </div>
+            </div>
+        </form>
         </div>
         <div class="container-fluid container-fixed-lg footer">
             <div class="copyright sm-text-center">
