Encapsula o cadastro na listagem

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/libs/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="scripts/libs/angular-ui-router.js"></script>
     <script src="scripts/menu-controller.js"></script>
+    <script src="scripts/cadastro-suricato-directive.js"></script>
 </body>
 
 </html>
